--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  google_fonts: ^6.3.0
   image_picker: ^1.2.0
+  mask_text_input_formatter: ^2.9.0
+  pinput: ^5.0.1
   url_launcher: ^6.3.2
 
 dev_dependencies:
