--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,3 +1,3 @@
-﻿DATABASE_URL=""postgresql://admin:secret@localhost:5432/foodapp?schema=public""
-JWT_SECRET=""changeme""
+﻿DATABASE_URL="postgresql://postgres:asuspro15@localhost:5432/adam_eve?schema=public"
+JWT_SECRET="changeme"
 PORT=4000
