feat(auth, menu and cart)

--- a/FRONTEND/android/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
     <application
         android:label="flutter_foodapp"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
             android:name=".MainActivity"
