--- a/FRONTEND/pubspec.yaml
+++ b/FRONTEND/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dio: ^5.9.0
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_secure_storage: ^9.2.4
   google_fonts: ^6.3.0
   image_picker: ^1.2.0
   mask_text_input_formatter: ^2.9.0
