--- a/FRONTEND/pubspec.yaml
+++ b/FRONTEND/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  supabase_flutter: ^2.5.0
   dio: ^5.9.0
   equatable: ^2.0.7
   flutter:
@@ -39,6 +40,7 @@ dependencies:
   image_picker: ^1.2.0
   mask_text_input_formatter: ^2.9.0
   pinput: ^5.0.1
+  shared_preferences: ^2.5.3
   url_launcher: ^6.3.2
 
 dev_dependencies:
