--- a/FRONTEND/pubspec.yaml
+++ b/FRONTEND/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.5.0
+  intl: ^0.20.2
   dio: ^5.9.0
   equatable: ^2.0.7
   flutter:
